# zdenda-mail

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  navrhy.md  persona.md  pyproject.toml  rule_changes_v72.md
assets/signature/: signature.html  signature.txt
migrations/: 001_init.sql  002_subcategory.sql  003_analysis_layer.sql
scripts/: backup_plan_mbox.py  open_loops.py
src/zdenda_mail/: __init__.py  classifier.py  cli.py  config.py  db.py  fetcher.py  imap_client.py  models.py  rules.py
tests/: test_classifier.py  test_fetcher.py
